sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:8: error: ')' expected but '<-' found.
		while ( i <- (getNombreValeurs()-2 to 0 by -1)){
                          ^AlgBubbleSort2:8: error: illegal start of simple expression
		while ( i <- (getNombreValeurs()-2 to 0 by -1)){
                                                              ^